--- a/src/main/webapp/app/ventanillaCreate.xhtml
+++ b/src/main/webapp/app/ventanillaCreate.xhtml
@@ -247,7 +247,8 @@
                             </p:row>
                             <p:row>
                                 <p:column>
-                                    <p:autoComplete id="seccion" value="#{ventanillaController.seccion}"
+                                    <p:autoComplete id="seccion"
+                                                    value="#{ventanillaController.inscripcion.acto.seccion}"
                                                     dropdown="true" minQueryLength="1" scrollHeight="250"
                                                     required="true"
                                                     completeMethod="#{ventanillaController.findSeccion}"
@@ -273,10 +274,37 @@
 
                                 </p:column>
                                 <p:column>
-                                    <p:autoComplete id="acto" value="#{ventanillaController.acto}"
+                                    <p:autoComplete id="acto" value="#{ventanillaController.inscripcion.acto}"
                                                     dropdown="true" minQueryLength="1" scrollHeight="250"
                                                     required="true"
                                                     completeMethod="#{ventanillaController.findActo}"
+                                                    forceSelection="true"
+                                                    var="s"
+                                                    itemLabel="#{s ne null ? s.codigo.concat(' - ').concat(s.descripcion) : ''}"
+                                                    itemValue="#{s}"
+                                                    converter="genericMapConverter"
+                                                    cache="true"
+                                                    size="3">
+                                        <p:column headerText="Código">
+                                            #{s.codigo}
+                                        </p:column>
+                                        <p:column headerText="Descripción">
+                                            #{s.descripcion}
+                                        </p:column>
+                                        <!--
+                                                                                <p:ajax event="itemSelect"
+                                                                                        update="nodo"
+                                                                                        listener="#{ventanillaController.handleSitioChange}"/>
+                                        -->
+                                    </p:autoComplete>
+
+                                </p:column>
+                                <p:column>
+                                    <p:autoComplete id="movimiento"
+                                                    value="#{ventanillaController.inscripcion.movimiento}"
+                                                    dropdown="true" minQueryLength="1" scrollHeight="250"
+                                                    required="true"
+                                                    completeMethod="#{ventanillaController.findMovimiento}"
                                                     forceSelection="true"
                                                     var="s"
                                                     itemLabel="#{s ne null ? s.codigo.concat(' - ').concat(s.descripcion) : ''}"
