--- a/src/main/webapp/app/init.xhtml
+++ b/src/main/webapp/app/init.xhtml
@@ -13,8 +13,9 @@
         <h:form>
             <!--<h:outputText value="#{requestScope['javax.servlet.forward.request_uri']}"/>-->
             <c:if test="#{identity.loggedIn and (authorizationChecker.admin or authorizationChecker.ventanilla) }">
-                <p:commandButton styleClass="admin-dashboard-button" value="Ventanilla" action="createVentanilla"
-                             ajax="false"/>
+                <p:commandButton styleClass="admin-dashboard-button" value="Ventanilla"
+                                 action="#{ventanillaController.doCreate}"
+                                 ajax="false"/>
             </c:if>
 
             <p:commandButton styleClass="admin-dashboard-button" value="Preventivos" action="preventivos" ajax="false"/>
