--- a/src/main/webapp/app/init.xhtml
+++ b/src/main/webapp/app/init.xhtml
@@ -18,13 +18,15 @@
                                  ajax="false"/>
             </c:if>
 
-            <p:commandButton styleClass="admin-dashboard-button" value="Preventivos" action="preventivos" ajax="false"/>
-            <p:commandButton styleClass="admin-dashboard-button" value="Reporte" action="reportePreventivos"
+            <p:commandButton styleClass="admin-dashboard-button" value="Verificación" action="preventivos"
                              ajax="false"/>
-            <p:commandButton styleClass="admin-dashboard-button" value="Nodos 3G" action="nodos3g" ajax="false"/>
-            <p:commandButton styleClass="admin-dashboard-button" value="Nodos LTE" action="nodosLte" ajax="false"/>
+            <p:commandButton styleClass="admin-dashboard-button" value="Calificar" action="reportePreventivos"
+                             ajax="false"/>
+            <p:commandButton styleClass="admin-dashboard-button" value="Completar" action="nodos3g" ajax="false"/>
+            <p:commandButton styleClass="admin-dashboard-button" value="Maestro" action="nodosLte" ajax="false"/>
             <br/>
-            <p:commandButton styleClass="admin-dashboard-button" value="Sitios" action="sitios" ajax="false"/>
+            <p:commandButton styleClass="admin-dashboard-button" value="Completar maestro" action="sitios"
+                             ajax="false"/>
             <p:commandButton styleClass="admin-dashboard-button" value="Zonas" action="zonas" ajax="false"/>
             <!--
                         <p:commandButton styleClass="admin-dashboard-button" value="IPs" action="ips" ajax="false"/>
