Ajustes incripciones ventanilla

--- a/src/main/webapp/app/init.xhtml
+++ b/src/main/webapp/app/init.xhtml
@@ -22,37 +22,38 @@
                              ajax="false"/>
             <p:commandButton styleClass="admin-dashboard-button" value="Calificar" action="reportePreventivos"
                              ajax="false"/>
+            <br/>
             <p:commandButton styleClass="admin-dashboard-button" value="Completar" action="nodos3g" ajax="false"/>
             <p:commandButton styleClass="admin-dashboard-button" value="Maestro" action="nodosLte" ajax="false"/>
-            <br/>
             <p:commandButton styleClass="admin-dashboard-button" value="Completar maestro" action="sitios"
                              ajax="false"/>
-            <p:commandButton styleClass="admin-dashboard-button" value="Zonas" action="zonas" ajax="false"/>
-            <!--
+            <br/>
+
+
+            <!-- <p:commandButton styleClass="admin-dashboard-button" value="Zonas" action="zonas" ajax="false"/>
                         <p:commandButton styleClass="admin-dashboard-button" value="IPs" action="ips" ajax="false"/>
+
+                            <p:commandButton styleClass="admin-dashboard-button" value="Celdas 3G" action="celdas3G"
+                                             ajax="false" disabled="true"/>
+                            <p:commandButton styleClass="admin-dashboard-button" value="Celdas LTE" action="celdasLte"
+                                             ajax="false" disabled="true"/>
             -->
 
+            <p:commandButton styleClass="admin-dashboard-button" value="Escribanos" action="escribanos"
+                             ajax="false"/>
+            <!--
+                        <p:commandButton styleClass="admin-dashboard-button" value="Torreros" action="torreros"
+                                         ajax="false"/>
+                        <p:commandButton styleClass="admin-dashboard-button" value="Tipo antena" action="tipoAntenas"
+                                         ajax="false"/>
+                        <p:commandButton styleClass="admin-dashboard-button" value="Tipo feeder" action="tipoFeeder"
+                                         ajax="false"/>
+                        <p:commandButton styleClass="admin-dashboard-button" value="Interviniente" action="interviniente"
+                                         ajax="false"/>
+                        <p:commandButton styleClass="admin-dashboard-button" value="Estructura" action="estructuras"
+                                         ajax="false"/>
+            -->
             <br/>
-                <!--
-                                <p:commandButton styleClass="admin-dashboard-button" value="Celdas 3G" action="celdas3G"
-                                                 ajax="false" disabled="true"/>
-                                <p:commandButton styleClass="admin-dashboard-button" value="Celdas LTE" action="celdasLte"
-                                                 ajax="false" disabled="true"/>
-                -->
-
-                <p:commandButton styleClass="admin-dashboard-button" value="Escribanos" action="escribanos"
-                                 ajax="false"/>
-                <p:commandButton styleClass="admin-dashboard-button" value="Torreros" action="torreros"
-                                 ajax="false"/>
-                <p:commandButton styleClass="admin-dashboard-button" value="Tipo antena" action="tipoAntenas"
-                                 ajax="false"/>
-                <p:commandButton styleClass="admin-dashboard-button" value="Tipo feeder" action="tipoFeeder"
-                                 ajax="false"/>
-                <p:commandButton styleClass="admin-dashboard-button" value="Interviniente" action="interviniente"
-                                 ajax="false"/>
-                <p:commandButton styleClass="admin-dashboard-button" value="Estructura" action="estructuras"
-                                 ajax="false"/>
-                <br/>
 
         </h:form>
     </ui:define>
