--- a/src/main/webapp/app/ventanillaCreate.xhtml
+++ b/src/main/webapp/app/ventanillaCreate.xhtml
@@ -333,8 +333,6 @@
                                         -->
                                     </p:autoComplete>
 
-                                </p:column>
-                                <p:column>
                                     <p:commandButton value="Repetir acto"
                                                      action="#{ventanillaController.repetirInscripcion}"
                                                      update="@form growl"
@@ -342,11 +340,12 @@
                                     <p:commandButton value="&lt;"
                                                      action="#{ventanillaController.previousInscripcion}"
                                                      update="@form growl"
-                                                     immediate="true"/>
+                                                     validateClient="true"/>
                                     <p:commandButton value="&gt;"
                                                      action="#{ventanillaController.nextInscripcion}"
                                                      update="@form growl"
-                                                     immediate="true"/>
+                                                     validateClient="true"/>
+
                                 </p:column>
                             </p:row>
                         </p:panelGrid>
