--- a/src/main/webapp/app/ventanillaCreate.xhtml
+++ b/src/main/webapp/app/ventanillaCreate.xhtml
@@ -348,6 +348,111 @@
                         <p:tabView>
                             <p:tab id="pfisica" title="Persona física"
                                    disabled="#{not loginController.isRegistroAvailable4User('RGI')}">
+
+                                <p:panelGrid id="pfPanel" styleClass="center">
+                                    <p:row>
+                                        <p:column>
+                                            <p:outputLabel for="interviniente" value="Interviniente"/>
+                                        </p:column>
+                                        <p:column>
+                                            <p:outputLabel for="ci" value="CI"/>
+                                        </p:column>
+                                        <p:column>
+                                            <p:outputLabel for="apellidos" value="Apellidos"/>
+                                        </p:column>
+                                        <p:column>
+                                            <p:outputLabel for="nombres" value="Nombres"/>
+                                        </p:column>
+                                    </p:row>
+                                    <p:row>
+                                        <p:column>
+                                            <p:inputText id="interviniente"
+                                                         value="#{ventanillaController.inscripcion.ordinal}"
+                                                         required="true"
+                                                         size="3" readonly="true">
+                                            </p:inputText>
+                                        </p:column>
+                                        <p:column>
+                                            <p:autoComplete id="apellido1"
+                                                            value="#{ventanillaController.inscripcion.acto.seccion}"
+                                                            dropdown="true" minQueryLength="1" scrollHeight="250"
+                                                            required="true"
+                                                            completeMethod="#{ventanillaController.findSeccion}"
+                                                            forceSelection="true"
+                                                            var="s"
+                                                            itemLabel="#{s ne null ? s.codigo.concat(' - ').concat(s.descripcion) : ''}"
+                                                            itemValue="#{s}"
+                                                            converter="genericMapConverter"
+                                                            cache="true"
+                                                            size="3">
+                                                <p:column headerText="Código">
+                                                    #{s.codigo}
+                                                </p:column>
+                                                <p:column headerText="Descripción">
+                                                    #{s.descripcion}
+                                                </p:column>
+                                                <p:ajax event="itemSelect"
+                                                        update="acto"
+                                                        listener="#{ventanillaController.handleSeccionChange}"/>
+                                            </p:autoComplete>
+
+                                        </p:column>
+                                        <p:column>
+                                            <p:autoComplete id="acto" value="#{ventanillaController.inscripcion.acto}"
+                                                            dropdown="true" minQueryLength="1" scrollHeight="250"
+                                                            required="true"
+                                                            completeMethod="#{ventanillaController.findActo}"
+                                                            forceSelection="true"
+                                                            var="s"
+                                                            itemLabel="#{s ne null ? s.codigo.concat(' - ').concat(s.descripcion) : ''}"
+                                                            itemValue="#{s}"
+                                                            converter="genericMapConverter"
+                                                            cache="true"
+                                                            size="6">
+                                                <p:column headerText="Código">
+                                                    #{s.codigo}
+                                                </p:column>
+                                                <p:column headerText="Descripción">
+                                                    #{s.descripcion}
+                                                </p:column>
+                                                <!--
+                                                                                        <p:ajax event="itemSelect"
+                                                                                                update="nodo"
+                                                                                                listener="#{ventanillaController.handleSitioChange}"/>
+                                                -->
+                                            </p:autoComplete>
+
+                                        </p:column>
+                                        <p:column>
+                                            <p:autoComplete id="movimiento"
+                                                            value="#{ventanillaController.inscripcion.movimiento}"
+                                                            dropdown="true" minQueryLength="1" scrollHeight="250"
+                                                            required="true"
+                                                            completeMethod="#{ventanillaController.findMovimiento}"
+                                                            forceSelection="true"
+                                                            var="s"
+                                                            itemLabel="#{s ne null ? s.codigo.concat(' - ').concat(s.descripcion) : ''}"
+                                                            itemValue="#{s}"
+                                                            converter="genericMapConverter"
+                                                            cache="true"
+                                                            size="6">
+                                                <p:column headerText="Código">
+                                                    #{s.codigo}
+                                                </p:column>
+                                                <p:column headerText="Descripción">
+                                                    #{s.descripcion}
+                                                </p:column>
+                                                <!--
+                                                                                        <p:ajax event="itemSelect"
+                                                                                                update="nodo"
+                                                                                                listener="#{ventanillaController.handleSitioChange}"/>
+                                                -->
+                                            </p:autoComplete>
+                                        </p:column>
+                                    </p:row>
+                                </p:panelGrid>
+
+
                             </p:tab>
                             <p:tab id="pjuridica" title="Persona jurídica"
                                    disabled="#{not loginController.isRegistroAvailable4User('RGI')}">
